rollback VM options
GitOrigin-RevId: 541c1b3da16cf340bcc4aa33781020184a980bcb