@@ -18,23 +18,7 @@ final class VmOptionsGenerator {
     '-Djdk.http.auth.tunneling.disabledSchemes=""',
     '-Djdk.attach.allowAttachSelf=true',
     '-Djdk.module.illegalAccess.silent=true',
-    '-Dkotlinx.coroutines.debug=off',
-    '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-    '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-    '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/java.awt=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/java.awt.event=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/javax.swing=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/javax.swing.text.html=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/sun.awt.image=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/sun.font=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/sun.swing=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/com.apple.eawt=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/com.apple.eawt.event=ALL-UNNAMED',
-    '--add-opens', 'java.desktop/com.apple.laf=ALL-UNNAMED'
-    )
+    '-Dkotlinx.coroutines.debug=off')
 
   static final Map<String, String> MEMORY_OPTIONS = Map.of(
     '-Xms', '128m',
